# DISTINGUISH-WF

./: .gitignore  DA.pipt  README.md  app.py  chosen_realization_A1.npz  chosen_realization_A7.npz  chosen_realization_B2.npz  chosen_realization_B8.npz  chosen_realization_C1.npz  chosen_realization_C1_6.npz  chosen_realization_C1_minus_28_57.npz  chosen_realization_C1_minus_2_24.npz  chosen_realization_C1_minus_36_58.npz  chosen_realization_C1_minus_42_50.npz  chosen_realization_C1_minus_45_60.npz  chosen_realization_C1_minus_47_55.npz  chosen_realization_F3.npz  chosen_realization_G7.npz  chosen_realization_G8.npz  orig_prior_small.npz  plot_for_app.py  pyproject.toml  run_WF.py
batch_run/: DA.pipt  gan_plot_results.py  plot_batch.py  plot_result.py  run_batch.py
data/: default_load.py  write_data.py
wf_demo/: DA.pipt  app.py  default_load.py  plot_for_app.py  prior.npz  readme.md  run_WF.py  write_data_var.py
