[project]
name = "wf-demo"
version = "2.0.0"
description = "The open DISTINGUISH Workflow"
authors = [{ name = "Kristian Fossum", email = "krfo@norceresearch.no" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "seaborn",
    "streamlit",
    "plotly",
    "kaleido",
    "PET-GAN-LOG @ git+https://github.com/geosteering-no/PET-GAN-LOG.git",
    "pathoptim @ git+https://github.com/geosteering-no/DSUP.git",
    "GAN-EM-model @ git+https://github.com/geosteering-no/GAN-EM-model.git",
    "udar_proxi @ git+https://github.com/KriFos1/UTA-proxy-final.git",
    "PET @ git+https://github.com/Python-Ensemble-Toolbox/PET.git",
]

[project.scripts]
run_WF = "wf_demo.run_WF:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wf_demo"]
exclude = ["data"]
